--- a/.env
+++ b/.env
@@ -3,15 +3,20 @@ MONGO_IMAGE=mongo:7.0                      # MongoDB server image version
 REDIS_IMAGE=redis:7.0.0                    # Redis server image version
 KAFKA_IMAGE=bitnami/kafka:3.5.1            # Kafka server image version
 MINIO_IMAGE=minio/minio:RELEASE.2024-01-11T07-46-16Z  # MinIO server image version
+
+# 性能监控Satrt
 PROMETHEUS_IMAGE=prom/prometheus:v2.51.2   # Prometheus monitoring system image version
 ALERTMANAGER_IMAGE=prom/alertmanager:v0.27.0 # Alertmanager for Prometheus image version
 GRAFANA_IMAGE=grafana/grafana:11.0.1       # Grafana visualization tool image version
+# 性能监控End
 ETCD_IMAGE=quay.io/coreos/etcd:v3.5.13
 
 OPENIM_WEB_FRONT_IMAGE=openim/openim-web-front:release-v3.8.3
 OPENIM_ADMIN_FRONT_IMAGE=openim/openim-admin-front:release-v1.8.4
 
+# 性能监控Satrt
 NODE_EXPORTER_IMAGE=prom/node-exporter:v1.7.0 # Prometheus Node Exporter image version
+# 性能监控End
 
 # OpenIM server and chat service images
 OPENIM_SERVER_IMAGE=openim/openim-server:release-v3.8.3 # OpenIM server application image version
@@ -26,8 +31,8 @@ DATA_DIR=./
 
 # MongoDB configuration
 MONGO_ADDRESS="mongo:27017"                # Address of MongoDB server
-MONGO_USERNAME=openIM                      # MongoDB username
-MONGO_PASSWORD=openIM123                   # MongoDB password
+MONGO_USERNAME=lihuaOopenIM                      # MongoDB username
+MONGO_PASSWORD=lihuaOpenIM123                   # MongoDB password
 
 # Kafka configuration
 KAFKA_ADDRESS="kafka:9094"                 # Address of Kafka server
@@ -37,18 +42,18 @@ ETCD_ADDRESS="etcd:2379"
 
 # Redis configuration
 REDIS_ADDRESS="redis:6379"                 # Address of Redis server
-REDIS_PASSWORD=openIM123                   # Redis password
+REDIS_PASSWORD=lihuaOpenIM123                   # Redis password
 
 # MinIO configuration
 MINIO_EXTERNAL_ADDRESS="http://external_ip:10005" # External address for MinIO needs to be manually modified
 MINIO_INTERNAL_ADDRESS="minio:9000"        # Internal network address of MinIO
 MINIO_ACCESS_KEY_ID=root                   # Access key ID for MinIO
-MINIO_SECRET_ACCESS_KEY=openIM123          # Secret access key for MinIO
+MINIO_SECRET_ACCESS_KEY=lihuaOpenIM123          # Secret access key for MinIO
 MINIO_PORT=10005                           # Port for MinIO server
 MINIO_CONSOLE_PORT=10004                   # Console port for MinIO
 
 # OpenIM configuration
-OPENIM_SECRET=openIM123                    # Secret for OpenIM authentication
+OPENIM_SECRET=lihuaOpenIM123                    # Secret for OpenIM authentication
 OPENIM_API_PORT=10002                      # API port for OpenIM server
 OPENIM_MSG_GATEWAY_PORT=10001              # Message gateway port for OpenIM
 
@@ -63,7 +68,7 @@ OPENIM_ADMIN_FRONT_PORT=11002              # Admin frontend port for OpenIM
 
 # Monitoring ports
 PROMETHEUS_PORT=19090                      # Port for Prometheus server
-ALERTMANAGER_PORT=19093                   # Port for Alert Manager
+ALERT_MANAGER_PORT=19093                   # Port for Alert Manager
 GRAFANA_PORT=13000                         # Port for Grafana
 NODE_EXPORTER_PORT=19100                   # Port for Prometheus Node Exporter
 
