--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -207,7 +207,7 @@ services:
 
   openim-server:
     image: ${OPENIM_SERVER_IMAGE}
-    build: /home/openim-server
+    # build: /home/openim-server
     container_name: openim-server
     init: true
     ports:
@@ -246,7 +246,7 @@ services:
 
   openim-chat:
     image: ${OPENIM_CHAT_IMAGE}
-    build: /home/openim-chat
+    # build: /home/openim-chat
     container_name: openim-chat
     init: true
     healthcheck:
