--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,49 +3,49 @@ networks:
     driver: bridge
 
 services:
-  mongo:
-    image: "${MONGO_IMAGE}"
-    container_name: mongo
-    command: >
-      bash -c '
-      docker-entrypoint.sh mongod --wiredTigerCacheSizeGB $$wiredTigerCacheSizeGB --auth &
-      until mongosh -u $$MONGO_INITDB_ROOT_USERNAME -p $$MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase admin --eval "db.runCommand({ ping: 1 })" &>/dev/null; do
-        echo "Waiting for MongoDB to start..."
-        sleep 1
-      done &&
-      mongosh -u $$MONGO_INITDB_ROOT_USERNAME -p $$MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase admin --eval "
-      db = db.getSiblingDB(\"$$MONGO_INITDB_DATABASE\");
-      if (!db.getUser(\"$$MONGO_OPENIM_USERNAME\")) {
-        db.createUser({
-          user: \"$$MONGO_OPENIM_USERNAME\",
-          pwd: \"$$MONGO_OPENIM_PASSWORD\",
-          roles: [{role: \"readWrite\", db: \"$$MONGO_INITDB_DATABASE\"}]
-        });
-        print(\"User created successfully: \");
-        print(\"Username: $$MONGO_OPENIM_USERNAME\");
-        print(\"Password: $$MONGO_OPENIM_PASSWORD\");
-        print(\"Database: $$MONGO_INITDB_DATABASE\");
-      } else {
-        print(\"User already exists in database: $$MONGO_INITDB_DATABASE, Username: $$MONGO_OPENIM_USERNAME\");
-      }
-      " &&
-      tail -f /dev/null
-      '
-    volumes:
-      - "${DATA_DIR}/components/mongodb/data/db:/data/db"
-      - "${DATA_DIR}/components/mongodb/data/logs:/data/logs"
-      - "${DATA_DIR}/components/mongodb/data/conf:/etc/mongo"
-    environment:
-      - TZ=Asia/Shanghai
-      - wiredTigerCacheSizeGB=1
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=openIM123
-      - MONGO_INITDB_DATABASE=openim_v3
-      - MONGO_OPENIM_USERNAME=${MONGO_USERNAME}
-      - MONGO_OPENIM_PASSWORD=${MONGO_PASSWORD}
-    restart: always
-    networks:
-      - openim
+  # mongo:
+  #   image: "${MONGO_IMAGE}"
+  #   container_name: mongo
+  #   command: >
+  #     bash -c '
+  #     docker-entrypoint.sh mongod --wiredTigerCacheSizeGB $$wiredTigerCacheSizeGB --auth &
+  #     until mongosh -u $$MONGO_INITDB_ROOT_USERNAME -p $$MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase admin --eval "db.runCommand({ ping: 1 })" &>/dev/null; do
+  #       echo "Waiting for MongoDB to start..."
+  #       sleep 1
+  #     done &&
+  #     mongosh -u $$MONGO_INITDB_ROOT_USERNAME -p $$MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase admin --eval "
+  #     db = db.getSiblingDB(\"$$MONGO_INITDB_DATABASE\");
+  #     if (!db.getUser(\"$$MONGO_OPENIM_USERNAME\")) {
+  #       db.createUser({
+  #         user: \"$$MONGO_OPENIM_USERNAME\",
+  #         pwd: \"$$MONGO_OPENIM_PASSWORD\",
+  #         roles: [{role: \"readWrite\", db: \"$$MONGO_INITDB_DATABASE\"}]
+  #       });
+  #       print(\"User created successfully: \");
+  #       print(\"Username: $$MONGO_OPENIM_USERNAME\");
+  #       print(\"Password: $$MONGO_OPENIM_PASSWORD\");
+  #       print(\"Database: $$MONGO_INITDB_DATABASE\");
+  #     } else {
+  #       print(\"User already exists in database: $$MONGO_INITDB_DATABASE, Username: $$MONGO_OPENIM_USERNAME\");
+  #     }
+  #     " &&
+  #     tail -f /dev/null
+  #     '
+  #   volumes:
+  #     - "${DATA_DIR}/components/mongodb/data/db:/data/db"
+  #     - "${DATA_DIR}/components/mongodb/data/logs:/data/logs"
+  #     - "${DATA_DIR}/components/mongodb/data/conf:/etc/mongo"
+  #   environment:
+  #     - TZ=Asia/Shanghai
+  #     - wiredTigerCacheSizeGB=1
+  #     - MONGO_INITDB_ROOT_USERNAME=root
+  #     - MONGO_INITDB_ROOT_PASSWORD=openIM123
+  #     - MONGO_INITDB_DATABASE=openim_v3
+  #     - MONGO_OPENIM_USERNAME=${MONGO_USERNAME}
+  #     - MONGO_OPENIM_PASSWORD=${MONGO_PASSWORD}
+  #   restart: always
+  #   networks:
+  #     - openim
 
   redis:
     image: "${REDIS_IMAGE}"
