build: 注释掉 API 和 admin API 服务对 mongo 服务的依赖
- 在 docker-compose.yaml 文件中，注释掉了 openim-api 和 openim-admin-api 服务对 mongo 服务的依赖
- 这可能是为了支持 MongoDB 外部部署，减少内部服务依赖

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -236,7 +236,7 @@ services:
       - IMENV_OPENIM_API_PROMETHEUS_GRAFANAURL=${GRAFANA_URL}
     restart: always
     depends_on:
-      - mongo
+      # - mongo
       - redis
       - etcd
       - kafka
@@ -270,7 +270,7 @@ services:
       - "${ADMIN_API_PORT}:10009"
     restart: always
     depends_on:
-      - mongo
+      # - mongo
       - redis
       - etcd
       - kafka
