style(docker): 更新 openim-chat 服务配置
- 移除 openim-chat 服务的 image 属性
- 修改 build 属性路径，取消注释

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -246,7 +246,7 @@ services:
 
   openim-chat:
     image: ${OPENIM_CHAT_IMAGE}
-    # build: /home/openim-chat
+    build: /home/openim-chat
     container_name: openim-chat
     init: true
     healthcheck:
