env: 更新 OpenIM 服务器 API URL
- 将 API_URL 从具体的 IP 地址改为使用 Docker 内部网络的主机地址
- 这样可以更好地适应本地开发和测试环境的变化

--- a/.env
+++ b/.env
@@ -72,8 +72,8 @@ ALERT_MANAGER_PORT=19093                   # Port for Alert Manager
 GRAFANA_PORT=13000                         # Port for Grafana
 NODE_EXPORTER_PORT=19100                   # Port for Prometheus Node Exporter
 
-# General settings
-API_URL="http://47.108.26.241:10002"       # API URL for OpenIM server
+# General settings 1
+API_URL="http://host.docker.internal:10002"       # API URL for OpenIM server
 LOG_IS_STDOUT=true                         # Log output to standard out
 LOG_LEVEL=3                                # Log level: 3 for production environments, 6 for test environments
 
