feat(env): 更新环境变量配置
- 设置 MINIO_EXTERNAL_ADDRESS 和 GRAFANA_URL 为具体的外部 IP 地址
- 新增 OPENIM_IP 变量，指定 OpenIM 服务器的 IP 地址

--- a/.env
+++ b/.env
@@ -45,7 +45,7 @@ REDIS_ADDRESS="redis:6379"                 # Address of Redis server
 REDIS_PASSWORD=lihuaOpenIM123                   # Redis password
 
 # MinIO configuration
-MINIO_EXTERNAL_ADDRESS="http://external_ip:10005" # External address for MinIO needs to be manually modified
+MINIO_EXTERNAL_ADDRESS="http://47.108.26.241:10005" # External address for MinIO needs to be manually modified
 MINIO_INTERNAL_ADDRESS="minio:9000"        # Internal network address of MinIO
 MINIO_ACCESS_KEY_ID=root                   # Access key ID for MinIO
 MINIO_SECRET_ACCESS_KEY=lihuaOpenIM123          # Secret access key for MinIO
@@ -77,4 +77,5 @@ API_URL="http://47.108.26.241:10002"       # API URL for OpenIM server
 LOG_IS_STDOUT=true                         # Log output to standard out
 LOG_LEVEL=3                                # Log level: 3 for production environments, 6 for test environments
 
-GRAFANA_URL="http://external_ip:13000/"    # Define the URL for accessing the Grafana dashboard, specifying the external IP and port
+GRAFANA_URL="http://47.108.26.241:13000/"    # Define the URL for accessing the Grafana dashboard, specifying the external IP and port
+OPENIM_IP="47.108.26.241" # 必须要设置 OPENIM_IP，且不能是 127.0.0.1
