feat(docker-compose): 调整 MinIO 部署位置
- 将 MinIO 服务从 docker-compose.yaml 移动到 docker-compose-db.yaml
- 更新相关服务的依赖，移除对 MinIO 的引用
- 注释掉 docker-compose.yaml 中的 MinIO 配置，保留配置模板

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -103,23 +103,23 @@ services:
     networks:
       - openim
 
-  minio:
-    image: "${MINIO_IMAGE}"
-    ports:
-      - "${MINIO_PORT}:9000"
-      - "${MINIO_CONSOLE_PORT}:9090"
-    container_name: minio
-    volumes:
-      - "${DATA_DIR}/components/mnt/data:/data"
-      - "${DATA_DIR}/components/mnt/config:/root/.minio"
-    environment:
-      TZ: Asia/Shanghai
-      MINIO_ROOT_USER: "${MINIO_ACCESS_KEY_ID}"
-      MINIO_ROOT_PASSWORD: "${MINIO_SECRET_ACCESS_KEY}"
-    restart: always
-    command: minio server /data --console-address ':9090'
-    networks:
-      - openim
+  # minio:
+  #   image: "${MINIO_IMAGE}"
+  #   ports:
+  #     - "${MINIO_PORT}:9000"
+  #     - "${MINIO_CONSOLE_PORT}:9090"
+  #   container_name: minio
+  #   volumes:
+  #     - "${DATA_DIR}/components/mnt/data:/data"
+  #     - "${DATA_DIR}/components/mnt/config:/root/.minio"
+  #   environment:
+  #     TZ: Asia/Shanghai
+  #     MINIO_ROOT_USER: "${MINIO_ACCESS_KEY_ID}"
+  #     MINIO_ROOT_PASSWORD: "${MINIO_SECRET_ACCESS_KEY}"
+  #   restart: always
+  #   command: minio server /data --console-address ':9090'
+  #   networks:
+  #     - openim
 
   openim-web-front:
     image: ${OPENIM_WEB_FRONT_IMAGE}
@@ -240,7 +240,7 @@ services:
       - redis
       - etcd
       - kafka
-      - minio
+      # - minio
     networks:
       - openim
 
@@ -274,7 +274,7 @@ services:
       - redis
       - etcd
       - kafka
-      - minio
+      # - minio
       - openim-server
     networks:
       - openim
