--- a/.env
+++ b/.env
@@ -46,7 +46,7 @@ REDIS_PASSWORD=lihuaOpenIM123                   # Redis password
 
 # MinIO configuration
 MINIO_EXTERNAL_ADDRESS="http://121.43.227.78:10005" # External address for MinIO needs to be manually modified
-MINIO_INTERNAL_ADDRESS="minio:9000"        # Internal network address of MinIO
+MINIO_INTERNAL_ADDRESS="http://121.43.227.78:10005"        # Internal network address of MinIO
 MINIO_ACCESS_KEY_ID=root                   # Access key ID for MinIO
 MINIO_SECRET_ACCESS_KEY=lihuaOpenIM123          # Secret access key for MinIO
 MINIO_PORT=10005                           # Port for MinIO server
