--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -76,4 +76,5 @@ services:
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_USERNAME}
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PASSWORD}
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
-
+    networks:
+      - openim
