--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -69,12 +69,14 @@ services:
 
   mongo-express:
     image: mongo-express
+    container_name: mongo-express
     restart: always
     ports:
-      - 11008:8081
+      - "11008:8081"
     environment:
-      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_USERNAME}
-      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
+      ME_CONFIG_BASICAUTH_USERNAME: LIHUA
+      ME_CONFIG_BASICAUTH_PASSWORD: LIHUA00
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
     networks:
       - openim
