--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -78,5 +78,6 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: LIHUA00
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
     networks:
       - openim
