--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -79,5 +79,7 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
+    depends_on:
+      - mongo
     networks:
       - openim
