--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -206,8 +206,8 @@ services:
 #    network_mode: host
 
   openim-server:
-    image: ${OPENIM_SERVER_IMAGE}
-    # build: /home/openim-server
+    #image: ${OPENIM_SERVER_IMAGE}  #使用已有的
+    build: /home/openim-server
     container_name: openim-server
     init: true
     ports:
