--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -76,9 +76,8 @@ services:
     environment:
       ME_CONFIG_BASICAUTH_USERNAME: LIHUA
       ME_CONFIG_BASICAUTH_PASSWORD: LIHUA00
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
-#      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
     depends_on:
       - mongo
     networks:
