build(db): 更新 MongoDB 配置
- 移除 ME_CONFIG_MONGODB_ENABLE_ADMIN 环境变量
- 更新 ME_CONFIG_MONGODB_URL 为使用 root 用户和密码 openIM123

--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -76,8 +76,8 @@ services:
     environment:
       ME_CONFIG_BASICAUTH_USERNAME: "LIHUA"
       ME_CONFIG_BASICAUTH_PASSWORD: "LIHUA00"
-      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
-      ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/"
+#      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+      ME_CONFIG_MONGODB_URL: "mongodb://root:openIM123@mongo:27017"
     depends_on:
       - mongo
     networks:
