refactor: optimize etcd configuration
1. Remove ETCDCTL_ENDPOINTS environment variable as it's only for etcdctl tool
2. Keep essential etcd server configurations:
   - ETCD_LISTEN_CLIENT_URLS
   - ETCD_ADVERTISE_CLIENT_URLS
   - ETCD_LISTEN_PEER_URLS
   - ETCD_INITIAL_ADVERTISE_PEER_URLS

This change simplifies the etcd configuration by removing unnecessary environment
variables that don't affect the server's behavior.

--- a/.env
+++ b/.env
@@ -38,7 +38,9 @@ MONGO_PASSWORD=lihuaOpenIM123                   # MongoDB password
 KAFKA_ADDRESS="kafka:9094"                 # Address of Kafka server
 
 # Etcd configuration
-ETCD_ADDRESS="etcd:2379"
+ETCD_ADDRESS="http://121.43.227.78:2379"  
+ETCD_USERNAME=root
+ETCD_PASSWORD=lihuaOpenIM123                   # Etcd password
 
 # Redis configuration
 REDIS_ADDRESS="redis:6379"                 # Address of Redis server
