env(db): 添加 Mongo Express 相关环境变量并更新配置
- 在 .env 文件中添加 MONGO_EXPRESS_USERNAME、MONGO_EXPRESS_PASSWORD 和 MONGO_EXPRESS_PORT环境变量
- 更新 docker-compose-db.yaml 文件，使用新增的环境变量配置 Mongo Express
-调整 Mongo Express 端口映射，使用动态配置- 优化 Mongo Express 连接 MongoDB 的 URL，使用 .env 中的 MONGO_USERNAME 和 MONGO_PASSWORD

--- a/.env
+++ b/.env
@@ -33,6 +33,9 @@ DATA_DIR=./
 MONGO_ADDRESS="121.43.227.78:27017"                # Address of MongoDB server
 MONGO_USERNAME=lihuaOpenIM                      # MongoDB username
 MONGO_PASSWORD=lihuaOpenIM123                   # MongoDB password
+MONGO_EXPRESS_USERNAME=LIHUA
+MONGO_EXPRESS_PASSWORD=LIHUA00
+MONGO_EXPRESS_PORT=11008
 
 # Kafka configuration
 KAFKA_ADDRESS="kafka:9094"                 # Address of Kafka server
